# trafficPredictions

./: Dockerfile  README.md  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: deploy_client.yml  deploy_service.yml  evaluate_predictions.yml  fetch_data.yml  run_tests.yml  train_eval_models.yml
data/merged/: Kozina_data.csv  Ljubljana_data.csv  Maribor_data.csv  Pomurska_data.csv  Postojna_data.csv  Sl_Konjice_data.csv  Vransko_data.csv
data/processed/: Kozina_traffic_data.csv  Kozina_weather_data.csv  Ljubljana_traffic_data.csv  Ljubljana_weather_data.csv  Maribor_traffic_data.csv  Maribor_weather_data.csv  Pomurska_traffic_data.csv  Pomurska_weather_data.csv  Postojna_traffic_data.csv  Postojna_weather_data.csv  Sl_Konjice_traffic_data.csv  Sl_Konjice_weather_data.csv  Vransko_traffic_data.csv  Vransko_weather_data.csv
data/raw/: raw_fuel_data.json  raw_traffic_data.json  raw_weather_data.json
gx/: great_expectations.yml  run_trafficCheckpoint.py
gx/checkpoints/: trafficCheckpoint.yml
gx/expectations/: .ge_store_backend_id  trafficSuite.json
models/: Kozina_cars_model.pkl  Ljubljana_cars_model.pkl  Maribor_cars_model.pkl  Pomurska_cars_model.pkl  Postojna_cars_model.pkl  Sl_Konjice_cars_model.pkl  Vransko_cars_model.pkl
reports/: DataDrift_report.html
reports/Kozina/: cars_evaluation_report.csv  speed_evaluation_report.csv
reports/Ljubljana/: cars_evaluation_report.csv  speed_evaluation_report.csv
reports/Maribor/: cars_evaluation_report.csv  speed_evaluation_report.csv
tests/: test_my_api.py  test_traffic_api.py  test_weather_api.py
(+76 files in other folders)
