[tool.poetry]
name = "trafficpredictions"
version = "0.1.0"
description = "Project for building prediction models for traffic in Slovenia"
authors = ["Patrik Praprotnik <praprotnik.patrik@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.32.2"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
pyproj = "^3.6.1"
pandas = "^2.2.2"
holidays = "^0.49"
dvc = {extras = ["s3"], version = "^3.51.1"}
scikit-learn = "^1.5.0"
joblib = "^1.4.2"
great-expectations = "^0.18.14"
evidently = "^0.4.25"
mlflow = "^2.13.0"
tensorflow-io-gcs-filesystem = "~0.31.0"
tf2onnx = "^1.16.1"
onnxruntime = "^1.18.0"
onnx = "^1.16.1"
tensorflow = "^2.16.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
